[project]
name = "comfyui-prediction-boost"
description = "prediction boost custom node for ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/tmagara/ComfyUI-Prediction-Boost"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tmagara"
DisplayName = "ComfyUI-Prediction-Boost"
Icon = ""
